# cognitor-worker

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deploy.yml
src/: main.py  start_worker.py  stop_worker.py  utils.py
src/api/: server.py
src/chunking/: __init__.py  main.py
src/chunking/semantic/: __init__.py  main.py
src/chunking/simple/: __init__.py  main.py
src/config/: settings.py
src/doc-connector/: main.py
src/html-connector/: main.py
src/log-connector/: main.py
src/md-connector/: main.py
src/msg-connector/: main.py
src/pdf-connector/: main.py
src/utils/: chunking.py  ingestion.py  logging.py  worker_status.py
src/worker-daemon/: main.py
