[project]
name = "cognitor-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cognitor>=0.3.0",
    "extract-msg>=0.55.0",
    "olefile>=0.47",
    "pydantic-settings>=2.14.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pypdf>=6.0.0",
    "tiktoken>=0.13.0",
    "llama_index",
    "llama-index-embeddings-huggingface",
    "sentence-transformers>=5.5.1",
]
